fix(01--html-css): update flex wrap

--- a/01--html-css/Atelier-Html-Css/style.css
+++ b/01--html-css/Atelier-Html-Css/style.css
@@ -56,6 +56,7 @@ nav li, h1 {
 .top-part {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .rect{
@@ -102,9 +103,10 @@ nav li, h1 {
     bottom: 0;
 }
 
-.container-position2{
+.container-position{
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .text{
